--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,10 @@
     "express-nunjucks": "^3.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "knex": "^3.1.0",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.0",
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
