--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "start": "node ./server"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.18.2",
@@ -13,6 +14,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "knex": "^3.1.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.0",
